--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -80,6 +80,18 @@ jobs:
       - name: Set PR Number as Output
         run: echo "PR_NUMBER=${{ steps.cpr.outputs.pull-request-number }}" >> $GITHUB_ENV
 
+      - name: Squash Merge PR
+        run: |
+          PR_NUMBER=${{ steps.cpr.outputs.pull-request-number }} # Verwende die PR-Nummer, die im vorherigen Job festgelegt wurde
+          if [ -n "$PR_NUMBER" ]; then
+            gh pr merge $PR_NUMBER --squash --delete-branch --merge
+            echo "PR #$PR_NUMBER merged successfully."
+          else
+            echo "No open PR found to merge."
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # - run: echo ${{ github.event.action }}
 
       # - name: Auto approve
