--- a/.github/workflows/aaaa.yml
+++ b/.github/workflows/aaaa.yml
@@ -3,7 +3,7 @@ name: aaaa
 on:
   push:
     branches: ["update-3rd-party-licenses"]
-  pull_request_target: :
+  pull_request_target:
     branches: ["update-3rd-party-licenses"]
 
 permissions:
