--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -71,6 +71,23 @@ jobs:
           delete-branch: true
           sign-commits: true
 
+
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const { GITHUB_REPOSITORY } = process.env;
+            const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
+            const prNumber = ${{ steps.cpr.outputs.pull-request-number }};
+
+            const commentBody = `This deployment will be automatically...`;
+
+            await github.rest.issues.createComment({
+              owner: repoOwner,
+              repo: repoName,
+              issue_number: prNumber,
+              body: commentBody
+            });
+
       # - name: Auto approve
       #   if: steps.cpr.outputs.pull-request-operation == 'created'
       #   run: gh pr review --approve "${{ steps.cpr.outputs.pull-request-number }}"
