--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           echo "ID: ${{ steps.get-user-id.outputs.user-id }}"
           echo "string=${{ steps.generate-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
-      - run: echo "committer string is ${ {steps.committer.outputs.string }}"
+      - run: echo "committer string is ${{ steps.committer.outputs.string }}"
 
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -63,7 +63,7 @@ jobs:
       - name: Set up git config
         run: |
           git config --global user.name "AstraGermany-Bot"
-          git config --global user.email "1114328+AstraGermany-Bot@users.noreply.github.com"
+          git config --global user.email "195330822+astragermany-bot[bot]@users.noreply.github.com"
 
       - name: Run git add
         run: |
@@ -77,8 +77,8 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
           commit-message: "Update 3rd Party Licenses"
-          committer: "AstraGermany-Bot <1114328+AstraGermany-Bot@users.noreply.github.com>"
-          author: "AstraGermany-Bot <1114328+AstraGermany-Bot@users.noreply.github.com>"
+          committer: "AstraGermany-Bot <195330822+astragermany-bot[bot]@users.noreply.github.com>"
+          author: "AstraGermany-Bot <195330822+astragermany-bot[bot]@users.noreply.github.com>"
           signoff: true
           branch: update-3rd-party-licenses
           title: "Update 3rd Party Licenses"
