--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
           commit-message: "Update 3rd Party Licenses"
-          committer: "AstraGermany-Bot <195330822+astragermany-bot[bot]@users.noreply.github.com>"
+          committer: "astragermany-bot[bot] <195330822+astragermany-bot[bot]@users.noreply.github.com>"
           author: "AstraGermany-Bot <195330822+astragermany-bot[bot]@users.noreply.github.com>"
           signoff: true
           branch: update-3rd-party-licenses
