--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,12 @@ repos:
         language: python
         exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js$)
         files: ^.*(\.html|\.css|\.js)$
+      - id: run-python-script
+        name: Update Translations Python script
+        entry: |
+          python .github/scripts/check_language_properties.py \
+            --reference-file src/main/resources/messages_en_GB.properties \
+            --branch main
+        language: python
+        files: src/main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}.properties
+        types: [file]
