--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,7 +60,7 @@ repos:
         entry: |
           python .github/scripts/check_language_properties.py \
             --reference-file src/main/resources/messages_en_GB.properties \
-            --branch main
+            --branch ""
         language: python
         files: src/main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}.properties
         types: [file]
