--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Run Pre-Commit Hooks
         run: |
           pip install --require-hashes -r ./.github/scripts/requirements_pre_commit.txt
-      - run: pre-commit run --all-files -c .pre-commit-config.yaml
+      # - run: pre-commit run --all-files -c .pre-commit-config.yaml
+      - run: pre-commit run run-python-script --all-files -c .pre-commit-config.yaml
         continue-on-error: true
       - name: Set up git config
         run: |
