--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -29,10 +29,13 @@ jobs:
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
           python-version: "3.12"
+          cache: 'pip' # caching pip dependencies
       - name: Install dependencies
-        run: pip install tomlkit
+        run: pip install --require-hashes -r ./.github/scripts/requirements_sync_readme.txt
       - name: Sync README
-        run: python scripts/counter_translation.py
+        run: |
+          python .github/scripts/check_language_properties.py --reference-file "src/main/resources/messages_en_GB.properties" --branch main
+          python scripts/counter_translation.py
       - name: Set up git config
         run: |
           git config --global user.name "github-actions[bot]"
