--- a/scripts/ignore_translation.toml
+++ b/scripts/ignore_translation.toml
@@ -50,6 +50,7 @@ ignore = [
     'pipeline.title',
     'pipelineOptions.pipelineHeader',
     'pro',
+    'redact.zoom',
     'sponsor',
     'text',
     'validateSignature.cert.bits',
@@ -208,6 +209,11 @@ ignore = [
     'navbar.sections.security',
     'text',
     'watermark.type.1',
+]
+
+[sl_SI]
+ignore = [
+    'language.direction',
 ]
 
 [sr_LATN_RS]
