--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -51,7 +51,7 @@ jobs:
         run: pip install --require-hashes -r ./.github/scripts/requirements_sync_readme.txt
       - name: Sync README
         run: |
-          # python .github/scripts/check_language_properties.py --reference-file "src/main/resources/messages_en_GB.properties" --branch main
+          python .github/scripts/check_language_properties.py --reference-file "src/main/resources/messages_en_GB.properties" --branch main
           python scripts/counter_translation.py
       - name: Set up git config
         run: |
