--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -13,11 +13,13 @@ permissions:
   contents: read
 
 jobs:
-  sync-files:
+  read_bot_entries:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
+    outputs:
+      userID: ${{ steps.get-user-id.outputs.user-id }}
+      userName: ${{ steps.get-user-id.outputs.user_name }}
+      userEmail: ${{ steps.get-user-id.outputs.user_email }}
+      committer: ${{ steps.committer.outputs.committer }}
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
@@ -33,13 +35,47 @@ jobs:
 
       - name: Get GitHub App User ID
         id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ steps.generate-token.outputs.app-slug }}[bot]" --jq .id)" >> $GITHUB_OUTPUT
+        run: |
+          USER_NAME="${{ steps.generate-token.outputs.app-slug }}[bot]"
+          USER_EMAIL="${{ steps.get-user-id.outputs.user-id }}+$USER_NAME@users.noreply.github.com"
+          USER_ID=$(gh api "/users/$USER_NAME" --jq .id)
+          echo "user_name=$USER_NAME  >> "$GITHUB_OUTPUT"
+          echo "user_email=$USER_EMAIL  >> "$GITHUB_OUTPUT"
+          echo "user-id=$USER_ID" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-      - id: committer
+      - id: comitter
         run: |
-          echo "string=${{ steps.generate-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
+          COMMITTER="$USER_NAME <$USER_EMAIL>"
+          echo "committer=$COMMITTER  >> "$GITHUB_OUTPUT"
+
+  sync-files:
+    needs: [read_bot_entries]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Sync translation property files
+        run: |
+          python .github/scripts/check_language_properties.py --reference-file "src/main/resources/messages_en_GB.properties" --branch main
+
+  sync-readme:
+    needs: ["sync-files"]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
+        with:
+          egress-policy: audit
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up Python
@@ -49,16 +85,21 @@ jobs:
           cache: 'pip' # caching pip dependencies
       - name: Install dependencies
         run: pip install --require-hashes -r ./.github/scripts/requirements_sync_readme.txt
-      - name: Sync translation property files
-        run: |
-          python .github/scripts/check_language_properties.py --reference-file "src/main/resources/messages_en_GB.properties" --branch main
       - name: Sync README
         run: |
           python scripts/counter_translation.py
+
+  create-pull:
+    needs: ["read_bot_entries", "sync-files", "sync-readme"]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull_request: write
+    steps:
       - name: Set up git config
         run: |
-          git config --global user.name ${{ steps.generate-token.outputs.app-slug }}[bot]
-          git config --global user.email "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
+          git config --global user.name ${{ needs.read_bot_entries.outputs.userName }}
+          git config --global user.email ${{ needs.read_bot_entries.outputs.userEmail }}
       - name: Run git add
         run: |
           git add .
@@ -69,8 +110,8 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
           commit-message: Update files
-          committer: GitHub Action <action@github.com>
-          author: GitHub Action <action@github.com>
+          committer: ${{ needs.read_bot_entries.outputs.committer }}
+          author: ${{ needs.read_bot_entries.outputs.committer }}
           signoff: true
           branch: sync_readme
           title: ":memo: Sync translation files + Update README.md (Translation Progress Table)"
