--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -37,21 +37,21 @@ jobs:
         id: get-user-id
         run: |
           USER_NAME="${{ steps.generate-token.outputs.app-slug }}[bot]"
-          USER_EMAIL="${{ steps.get-user-id.outputs.user-id }}+$USER_NAME@users.noreply.github.com"
           USER_ID=$(gh api "/users/$USER_NAME" --jq .id)
+          USER_EMAIL="$USER_ID+$USER_NAME@users.noreply.github.com"
           echo "user_name=$USER_NAME" >> "$GITHUB_OUTPUT"
           echo "user_email=$USER_EMAIL" >> "$GITHUB_OUTPUT"
           echo "user-id=$USER_ID" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
-      - id: comitter
+      - id: committer
         run: |
           COMMITTER="${{ steps.get-user-id.outputs.user_name }} <${{ steps.get-user-id.outputs.user_email }}>"
-          echo "committer=$COMMITTER  >> "$GITHUB_OUTPUT"
+          echo "committer=$COMMITTER" >> "$GITHUB_OUTPUT"
 
   sync-files:
-    needs: [read_bot_entries]
+    needs: ["read_bot_entries"]
     runs-on: ubuntu-latest
     permissions:
       contents: write
