--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -73,11 +73,13 @@ jobs:
         run: |
           git add .
           git diff --staged --quiet || git commit -m ":memo: Sync translation files" || echo "no changes"
-      - name: Push changes
-        if: always() # Push, falls Änderungen existieren
+      - name: Pull remote changes
         run: |
-          git branch sync_readme
-          git push origin sync_readme
+          git pull origin HEAD --rebase
+      - name: Push changes
+        if: always()
+        run: |
+          git push origin HEAD
 
   sync-readme:
     needs: ["sync-files"]
