--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -61,6 +61,11 @@ jobs:
         uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
         with:
           egress-policy: audit
+      - name: Use Token
+        run: |
+          echo "Using token in this step"
+        env:
+          GH_TOKEN: ${{ needs.read_bot_entries.outputs.token }}
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Sync translation property files
