--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -130,8 +130,8 @@ jobs:
         include:
           - os: windows-latest
             platform: win-
-          - os: macos-latest
-            platform: mac-
+          # - os: macos-latest
+          #   platform: mac-
           # - os: ubuntu-latest
           #   platform: linux-
     runs-on: ${{ matrix.os }}
