--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -163,7 +163,8 @@ jobs:
           .\wix.exe /install /quiet
           where wix
 
-      - run: where wix
+      - run: Get-ChildItem -Path "C:\Program Files (x86)\WiX Toolset*" -Recurse -Filter "wix.exe"
+
       - run: exit 1
 
       # # Build installer
