--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -145,15 +145,15 @@ jobs:
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
-        with:
-          java-version: "21"
-          distribution: "temurin"
+      # - name: Set up JDK 21
+      #   uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
+      #   with:
+      #     java-version: "21"
+      #     distribution: "temurin"
 
-      - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
-        with:
-          gradle-version: 8.12
+      # - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
+      #   with:
+      #     gradle-version: 8.12
 
       # Install Windows dependencies
       - name: Install WiX Toolset
@@ -161,9 +161,10 @@ jobs:
         run: |
           curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe
           .\wix.exe /install /quiet
-          where wix
 
-      - run: Get-ChildItem -Path "C:\Program Files (x86)\WiX Toolset*" -Recurse -Filter "wix.exe"
+      - run: echo %cd%
+
+      - run: ls -la
 
       - run: exit 1
 
