--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -155,28 +155,35 @@ jobs:
       #   with:
       #     gradle-version: 8.12
 
+      - name: Cache WiX Toolset
+        if: matrix.os == 'windows-latest'
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+        with:
+          path: D:\a\test_java\test_java
+          key: wix-cache-${{ runner.os }}-${{ hashFiles('wix.exe') }}
+          restore-keys: |
+            wix-cache-${{ runner.os }}-
+
       # Install Windows dependencies
-      - name: Install WiX Toolset
+      - name: Retry WiX Download
+        if: matrix.os == 'windows-latest' && steps.cache.outputs.cache-hit != 'true'
+        run: |
+          for i in {1..3}; do
+            echo "Attempt $i to download WiX Toolset..."
+            curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe && break
+            echo "Download failed. Retrying in 5 seconds..."
+            sleep 5
+          done
+
+      - name: Verify Download
         if: matrix.os == 'windows-latest'
         run: |
-          curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe
-
-      - run: |
-          .\wix.exe /install /quiet
-        shell: pwsh
-
-      - run: |
-          dotnet tool install --global wix
-        shell: pwsh
-
-      - name: Display current directory
-        run: |
-          echo "Current Directory: $(Get-Location)"
-        shell: pwsh
-
-      - name: Display current directory using CMD
-        run: |
-          cmd /c where wix
+          if [ -f wix.exe ]; then
+            echo "WiX Toolset downloaded successfully."
+          else
+            echo "WiX Toolset download failed after multiple attempts."
+            exit 1
+          fi
 
       - run: exit 1
 
