--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -168,22 +168,26 @@ jobs:
       - name: Retry WiX Download
         if: matrix.os == 'windows-latest' && steps.cache.outputs.cache-hit != 'true'
         run: |
-          for i in {1..3}; do
-            echo "Attempt $i to download WiX Toolset..."
-            curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe && break
-            echo "Download failed. Retrying in 5 seconds..."
-            sleep 5
-          done
+          for ($i = 1; $i -le 3; $i++) {
+            Write-Host "Attempt $i to download WiX Toolset..."
+            curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe
+            if (Test-Path ./wix.exe) {
+              Write-Host "Download succeeded."
+              break
+            }
+            Write-Host "Download failed. Retrying in 5 seconds..."
+            Start-Sleep -Seconds 5
+          }
 
       - name: Verify Download
         if: matrix.os == 'windows-latest'
         run: |
-          if [ -f wix.exe ]; then
-            echo "WiX Toolset downloaded successfully."
-          else
-            echo "WiX Toolset download failed after multiple attempts."
+          if (Test-Path ./wix.exe) {
+            Write-Host "WiX Toolset downloaded successfully."
+          } else {
+            Write-Host "WiX Toolset download failed after multiple attempts."
             exit 1
-          fi
+          }
 
       - run: exit 1
 
