--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -157,6 +157,7 @@ jobs:
 
       - name: Cache WiX Toolset
         if: matrix.os == 'windows-latest'
+        id: cache
         uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
         with:
           path: D:\a\test_java\test_java
