--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,13 @@ jobs:
           java-version: ${{ matrix.jdk-version }}
           distribution: "temurin"
 
+      - run: |
+          # Generate verification metadata with signatures and checksums
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp
+
+          # Export the .keys file
+          ./gradlew --export-keys
+
       - name: Build with Gradle and no spring security
         run: ./gradlew clean build
         env:
