--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,17 +41,7 @@ jobs:
 
       - run: |
           # Generate verification metadata with signatures and checksums
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --export-keys
-
-      - name: Commit and push verification metadata
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add gradle/verification-metadata.xml
-          git commit -m "ci: Add updated verification metadata"
-          git push origin ${{ github.ref }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --export-keys build
 
       - name: Build with Gradle and no spring security
         run: ./gradlew clean build
