--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,9 @@ jobs:
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "exit_code_false=$exit_code_false" >> $GITHUB_ENV
             echo "error_output_false=$error_output_false" >> $GITHUB_ENV
+          else
+            echo "exit_code_false=" >> $GITHUB_ENV
+            echo "error_output_false=" >> $GITHUB_ENV
           fi
 
           if [ -f gradle-exit-code-true.txt ] && [ -s gradle-exit-code-true.txt ]; then
@@ -75,10 +78,13 @@ jobs:
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "exit_code_true=$exit_code_true" >> $GITHUB_ENV
             echo "error_output_true=$error_output_true" >> $GITHUB_ENV
+          else
+            echo "exit_code_true=" >> $GITHUB_ENV
+            echo "error_output_true=" >> $GITHUB_ENV
           fi
 
       - name: Post Comment to PR
-        if: failure() # Nur ausführen, wenn der Build fehlschlägt
+        if: env.exit_code_true
         run: |
           gh pr comment ${{ github.event.pull_request.number }} \
             --body "🚨 **Gradle Build Failed** 🚨
@@ -105,8 +111,8 @@ jobs:
 
           </details>
           "
-            env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Test Reports
         if: always()
@@ -177,44 +183,10 @@ jobs:
           chmod +x ./test.sh
           ./test.sh "${{ github.event.pull_request.user.login == 'dependabot[bot]' }}"
 
-      - name: Check Gradle Build Status
-        if: failure() # Nur ausführen, wenn der vorherige Schritt fehlschlägt
-        run: |
-          # Lesen Sie den Fehlercode und die Fehlerausgabe
-          exit_code=$(cat gradle-exit-code-true.txt || echo "unknown")
-          error_output=$(cat gradle-error-true.log || echo "No error output captured.")
-
-          # Erstellen Sie eine Ausgabe für den nächsten Schritt
-          echo "exit_code=$exit_code" >> $GITHUB_ENV
-          echo "error_output=$error_output" >> $GITHUB_ENV
-
       - name: Post Comment to PR
         if: failure() # Nur ausführen, wenn der Build fehlschlägt
         run: |
           gh pr comment ${{ github.event.pull_request.number }} \
-            --body "🚨 **Gradle Build Failed** 🚨
-
-          **Exit Code:** ${{ env.exit_code }}
-
-          <details>
-          <summary>Build Logs with spring security</summary>
-
-          \`\`\`
-          ${{ env.error_output }}
-          \`\`\`
-
-          </details>
-
-          **Exit Code:** ${{ env.exit_code_false }}
-
-          <details>
-          <summary>Build Logs without spring security</summary>
-
-          \`\`\`
-          ${{ env.error_output_false }}
-          \`\`\`
-
-          </details>
-          "
-            env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            --body "🚨 **Gradle Build Failed** 🚨"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
