--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
           if [ -f gradle-exit-code-false.txt ] && [ -s gradle-exit-code-false.txt ]; then
             # Lesen Sie den Fehlercode und die Fehlerausgabe
             exit_code_false=$(cat gradle-exit-code-false.txt || echo "unknown")
-            error_output_false=$(cat gradle-error.log || echo "No error output captured.")
+            error_output_false=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
 
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "exit_code_false=$exit_code_false" >> $GITHUB_ENV
@@ -73,7 +73,7 @@ jobs:
           if [ -f gradle-exit-code-true.txt ] && [ -s gradle-exit-code-true.txt ]; then
             # Lesen Sie den Fehlercode und die Fehlerausgabe
             exit_code_true=$(cat gradle-exit-code-true.txt || echo "unknown")
-            error_output_true=$(cat gradle-error.log || echo "No error output captured.")
+            error_output_true=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
 
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "exit_code_true=$exit_code_true" >> $GITHUB_ENV
@@ -120,6 +120,7 @@ jobs:
         with:
           name: test-reports-jdk-${{ matrix.jdk-version }}
           path: |
+            gradle-error.log
             build/reports/tests/
             build/test-results/
             build/reports/problems/
