--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           java-version: ${{ matrix.jdk-version }}
           distribution: "temurin"
 
-      - if: github.event.pull_request.user.login == 'dependabot[bot]'
+      - if: github.event.pull_request.user.login != 'dependabot[bot]'
         run: |
           # Generate verification metadata with signatures and checksums
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
@@ -193,4 +193,4 @@ jobs:
         run: |
           # chmod +x ./cucumber/test_webpages.sh
           chmod +x ./test.sh
-          ./test.sh "${{ github.event.pull_request.user.login == 'dependabot[bot]' }}"
+          ./test.sh "${{ github.event.pull_request.user.login 1= 'dependabot[bot]' }}"
